--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ h4, h2, h3, h1{
     font-size: var(--font-small);
     padding: 0 var(--spacing-medium);
     background-color: var(--color-white);
+    position: fixed;
+    z-index: 7;
+}
+
+.header.invisible{
+    display: none;
 }
 
 .header a{
@@ -101,9 +107,18 @@ h4, h2, h3, h1{
 /* 메뉴 */
 .navbar{
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
     z-index: 1;
+    height: 150px;
     background-color: var(--color-white);
+    transition: all 300ms ease-in;
+}
+
+.navbar.invisible{
+    top: -45px;
 }
 
 .navbar__main{
