--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ a{
     color: var(--color-black);
 }
 
+ul{
+    padding: 0;
+}
+
 li{
     list-style: none;
 }
@@ -486,21 +490,44 @@ h4, h2, h3, h1{
     color: var(--color-navy);
     margin: 0;
 }
-
-.course__container{
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin: var(--spacing-medium) auto;
+/*==========*/
+#container{
+    position:relative;
+    box-sizing:border-box;
+    overflow:hidden;
+    margin: var(--spacing-medium) auto 0 auto;
+    width: 40%;
+    height: auto;
 }
 
-.course__slide{
+/*slides*/
+.slide{
+    width: 100%;
+    height: 40vh;
+    margin: auto;
     position: relative;
 }
 
-.course__slide img{
-    width: 800px;
+.slides{
+    position:absolute;
+    overflow:hidden;
+    width: 100%;
+    height: 100%;
+    animation: fadein 1.5s;
+}
+
+@keyframes fadein{
+    from{
+        opacity:0.4;
+    }
+    to{
+        opacity:1;
+    }}
+
+.slides img{
+    width:100%;
+    height: 100%;
+    object-fit:cover;
 }
 
 .course__description{
@@ -509,30 +536,26 @@ h4, h2, h3, h1{
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    top: 39%;
+    top: 50%;
     left: 0;
     width: 100%;
-    height: 60%;
-    opacity: 1;
-    background-color: #00000090;
+    height: 50%;
     font-family: 'Nanum Gothic', sans-serif;
-    font-size: var(--font-medium);
     transition: all 300ms ease-in;
+    background-color: #00000090;
 }
 
-.course__description button a,
-.course__description span
-{
+.course__description a{
     color: var(--color-white);
+    font-size: var(--font-medium);
 }
 
 .course__description button{
     width: 130px;
     height: 40px;
-    margin: var(--spacing-medium) auto;
-    margin-bottom: 0;
-    border: solid 1px var(--color-white);
-    border-radius: 50px;
+    margin: var(--spacing-small) auto;
+    border: solid 1px white;
+    margin-top: var(--spacing-medium);
     transition: all 200ms ease-in;
 }
 
@@ -544,24 +567,41 @@ h4, h2, h3, h1{
     color: var(--color-black);
 }
 
-.course__right{
+.course__description button a{
+    font-size: var(--font-small);
+}
+
+/*=============*/
+#pager{
+    position:relative;
+    margin-top: var(--spacing-medium);
+    text-align:center;
+}
+
+.dotContainer{
+    width: 30rem;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    text-align: left;
+    margin: auto;
 }
 
-.course__button{
-    margin-top: var(--spacing-small);
+.dotContainer li{
+    padding-right: var(--spacing-small);
 }
 
-.course__button button{
-    font-size: 18px;
-    color: var(--color-light-grey);
+#pager span{
+    position:relative;
+    display:inline-block;
+    width:1rem;
+    height:1rem;
+    background-color:var(--color-grey);
+    border-radius:100%;
+    cursor:pointer;
+    transition:width 0.3s;
 }
 
-.course__button button:hover{
-    color: var(--color-black);
+#pager span.on{
+    background-color: var(--color-black);
 }
 
 /* 특산물 */
