--- a/style.css
+++ b/style.css
@@ -286,34 +286,50 @@ h4, h2, h3, h1{
 }
 
 .tour__wrapper{
+    margin: var(--spacing-medium) auto 0 auto;
+    padding-bottom: 0;
     width: 70%;
-    height: 430px;
+    margin: auto;
     position: relative;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
     overflow: hidden;
-    margin: var(--spacing-medium) auto;
 }
 
 .tour__slide{
+    width: 100%;
+    height: 430px;
+    position: relative;
     display: flex;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    position: absolute;
-    transition: all 600ms linear;
+    transition: all 500ms ease-in-out;
 }
 
-.tour__slide li{
+.tour__slides{
+    width: 300px;
+    height: 430px;
+    position: absolute;
+    overflow: hidden;
+}
+
+.tour__slides img{
     width: 100%;
-    margin-right: var(--spacing-medium);
+    height: 100%;
+    object-fit: cover;
+}
+
+.place{
+    width: 100%;
+    height: 100%;
+    margin: 17px;
+    display: flex;
+    align-items: center;
     position: relative;
 }
 
-.tour__slide li:not(:last-child){
-    float: left;
-}
-
-.tour__slide img{
-    height: 430px;
+.place img{
+    width: 100%;
+    height: auto;
 }
 
 .tour__description{
@@ -321,16 +337,21 @@ h4, h2, h3, h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: var(--font-medium);
+    color: var(--color-white);
+    background-color: var(--color-black);
     transform: translateY(10px);
     transition: all 300ms ease-in;
+}
+
+.place:hover .tour__description{
+    opacity: 0.8;
+    transform: translateY(0px);
 }
 
 .tour__description button a,
@@ -344,12 +365,6 @@ h4, h2, h3, h1{
     height: 40px;
     margin: var(--spacing-small) auto;
     border: solid 1px var(--color-white);
-}
-
-.tour__slide li:hover .tour__description{
-    opacity: 1;
-    background-color: #180d5c80;
-    transform: translateY(0);
 }
 
 .tour__controller{
@@ -785,22 +800,21 @@ h4, h2, h3, h1{
         margin-top: 5px;
     }
 
-    .tour__wrapper{
-        width: 80%;
-        height: 250px;
-        position: relative;
+    .tour__slide{
+        justify-content: flex-start;
     }
 
-    .tour__slide li{
-        margin-right: var(--spacing-small);
+    .tour__slides{
+        width: 250px;
+        height: 390px;
+        position: absolute;
+        overflow: hidden;
     }
 
-    .tour__slide img{
-        height: 250px;
-    }
-
-    .tour__description{
-        font-size: var(--font-small);
+    .place{
+        width: 250px;
+        height: 390px;
+        margin: 0;
     }
 
     .tour__description button{
